--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@types/chai": "^4.3.4",
     "@types/mocha": "^10.0.0",
     "chai": "^4.3.7",
+    "ethers": "^5.7.2",
     "hardhat": "^2.12.2",
     "hardhat-gas-reporter": "^1.0.9",
     "prettier": "^2.8.0",
@@ -37,6 +38,7 @@
     "solhint": "^3.3.7",
     "solhint-plugin-prettier": "^0.0.5",
     "solidity-coverage": "^0.8.2",
+    "tailwindcss": "^3.2.4",
     "ts-node": "^10.9.1",
     "typechain": "^8.1.1"
   }
